<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_orders"
            android:title="@string/nav_pedidos" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_map"
            android:title="@string/nav_mapa" />
        <item
            android:id="@+id/nav_reportes"
            android:icon="@drawable/ic_reports"
            android:title="@string/nav_reportes" />
        <item
            android:id="@+id/nav_incidencias"
            android:icon="@drawable/ic_incidents"
            android:title="@string/nav_incidencias" />
        <item
            android:id="@+id/nav_lista_productos"
            android:icon="@drawable/ic_lista_productos"
            android:title="@string/nav_lista_productos" />
        <item
            android:id="@+id/nav_usuarios"
            android:icon="@drawable/ic_users"
        android:title="@string/usuarios"
        android:visible="true" />
    </group>

    <item android:title="@string/account_settings">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>